# capinrs

./: .gitignore  AGENTS.md  Cargo.toml  package.json  pnpm-lock.yaml  wrangler.toml
pages/: index.html  package.json  pnpm-lock.yaml  tsconfig.node.json
pages/src/: App.tsx  styles.css
pages/src/components/: LoginForm.tsx
scripts/: build-wasm.sh
src/: client.rs  main.rs  ratatui_client.rs  ratatui_main.rs  simple_ui_client.rs  simple_ui_main.rs  test_websocket.rs  ui_client.rs  ui_client_main.rs  websocket_client.rs  websocket_client_main.rs  websocket_server.rs  websocket_server_main.rs
typescript/: package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
typescript/src/client/: index.tsx
typescript/src/server/: index.ts  rpc.ts
typescript/src/wasm-server/: index.ts
wasm/: Cargo.toml
wasm/src/: lib.rs  worker.rs
worker/src/: global.d.ts  index.ts
