[package]
name = "capinrs"
version = "0.1.0"
edition = "2024"
default-run = "ratatui-client"

[dependencies]
capnweb-core = "0.1.0"
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "sync", "full"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
ratatui = "0.25"
crossterm = "0.27"
rand = "0.8"

[[bin]]
name = "ratatui-client"
path = "src/ratatui_main.rs"
